--- a/src/Orleans.Clustering.Kubernetes/Orleans.Clustering.Kubernetes.csproj
+++ b/src/Orleans.Clustering.Kubernetes/Orleans.Clustering.Kubernetes.csproj
@@ -24,9 +24,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Orleans.Core" Version="2.0.0-rc2" />
-    <PackageReference Include="Microsoft.Orleans.OrleansRuntime" Version="2.0.0-rc2" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.1" />
+    <PackageReference Include="Microsoft.Orleans.Core" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Orleans.OrleansRuntime" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
