--- a/samples/HelloWorld.Grains/HelloWorld.Grains.csproj
+++ b/samples/HelloWorld.Grains/HelloWorld.Grains.csproj
@@ -6,9 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.1" />
-    <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Orleans.OrleansCodeGenerator.Build" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="2.1.2" />
+    <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="2.1.2" />
   </ItemGroup>
 
   <ItemGroup>
