--- a/samples/HelloWorld.Grains/HelloWorld.Grains.csproj
+++ b/samples/HelloWorld.Grains/HelloWorld.Grains.csproj
@@ -7,8 +7,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.1" />
-    <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="2.1.2" />
-    <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="2.1.2" />
+    <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="2.3.0-rc1" />
+    <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="2.3.0-rc1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
