--- a/samples/KubeClient/KubeClient.csproj
+++ b/samples/KubeClient/KubeClient.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.1.1" />
-    <PackageReference Include="Microsoft.Orleans.Core" Version="2.1.2" />
+    <PackageReference Include="Microsoft.Orleans.Core" Version="2.3.0-rc1" />
   </ItemGroup>
 
   <ItemGroup>
