--- a/samples/KubeSiloHost/KubeSiloHost.csproj
+++ b/samples/KubeSiloHost/KubeSiloHost.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.1.1" />
     <PackageReference Include="Microsoft.Orleans.OrleansProviders" Version="2.3.0-rc2" />
     <PackageReference Include="Microsoft.Orleans.OrleansRuntime" Version="2.3.0-rc2" />
