--- a/.vsts-release.yml
+++ b/.vsts-release.yml
@@ -35,7 +35,7 @@ steps:
   - task: NuGetCommand@2
     inputs:
       command: push
-      packagesToPush: '$(build.artifactStagingDirectory)/*.nupkg'
+      packagesToPush: "$(build.ArtifactStagingDirectory)/**/*.nupkg;!$(build.ArtifactStagingDirectory)/**/*.symbols.nupkg"
       publishFeedCredentials: 'OSS'
       nuGetFeedType: external
       versioningScheme: byEnvVar
