Add kind config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - uses: engineerd/setup-kind@v0.3.0
+        with:
+          config: .github/workflows/kind.yml
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
