Update to .NET 3.1 and VS 2019 and latest Orleans version 3.1.5.

--- a/samples/KubeClient/Dockerfile
+++ b/samples/KubeClient/Dockerfile
@@ -1,4 +1,4 @@
-FROM microsoft/dotnet:runtime
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
 WORKDIR /app
 COPY . ./
 ENTRYPOINT ["dotnet", "KubeClient.dll"]
