--- a/src/Orleans.Clustering.Kubernetes/Definitions/ClusterVersionCRD.yaml
+++ b/src/Orleans.Clustering.Kubernetes/Definitions/ClusterVersionCRD.yaml
@@ -1,10 +1,21 @@
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: clusterversions.orleans.dot.net
 spec:
   group: orleans.dot.net
-  version: v1
+  versions:
+    - name: v1
+      served: true
+      storage: true
+      schema:
+        openAPIV3Schema:
+            type: object
+            properties:
+                clusterId:
+                    type: string
+                clusterVersion:
+                    type: integer
   scope: Namespaced
   names:
     plural: clusterversions
@@ -12,3 +23,4 @@ spec:
     kind: OrleansClusterVersion
     shortNames:
     - ocv
+    - oc
