--- a/src/Orleans.Clustering.Kubernetes/Definitions/SiloEntryCRD.yaml
+++ b/src/Orleans.Clustering.Kubernetes/Definitions/SiloEntryCRD.yaml
@@ -1,10 +1,46 @@
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: silos.orleans.dot.net
 spec:
   group: orleans.dot.net
-  version: v1
+  versions:
+    - name: v1
+      served: true
+      storage: true
+      schema:
+        openAPIV3Schema:
+            required: [ address, port, generation, hostname, status, siloName ]
+            type: object
+            properties:
+                clusterId:
+                    type: string
+                address:
+                    type: string
+                port:
+                    type: integer
+                generation:
+                    type: integer
+                hostname:
+                    type: string
+                status:
+                    type: string
+                proxyPort:
+                    type: integer
+                siloName:
+                    type: string
+                suspectingSilos:
+                    type: array
+                    items:
+                        type: string
+                suspectingTimes:
+                    type: array
+                    items:
+                        type: string
+                startTime:
+                    type: string
+                iAmAliveTime:
+                    type: string
   scope: Namespaced
   names:
     plural: silos
@@ -12,3 +48,4 @@ spec:
     kind: OrleansSilo
     shortNames:
     - oso
+    - os
