--- a/samples/Definitions/Client-ServiceAccount.yaml
+++ b/samples/Definitions/Client-ServiceAccount.yaml
@@ -1,33 +1,31 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-    name: orleansclient
-    namespace: kubetest
+  name: orleansclient
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+kind: Role
 metadata:
-    name: orleansclient
+  name: orleansclient
 rules:
-    - apiGroups:
-          - orleans.dot.net
-      resources:
-          - silos
-          - clusterversions
-      verbs:
-          - get
-          - list
-          - watch
+- apiGroups:
+    - orleans.dot.net
+  resources:
+    - silos
+    - clusterversions
+  verbs:
+    - get
+    - list
+    - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
-    name: orleansclient
+  name: orleansclient
 roleRef:
-    apiGroup: rbac.authorization.k8s.io
-    kind: ClusterRole
-    name: orleansclient
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: orleansclient
 subjects:
-    - kind: ServiceAccount
-      name: orleansclient
-      namespace: kubetest
+- kind: ServiceAccount
+  name: orleansclient
