--- a/samples/Definitions/Silo-ServiceAccount.yaml
+++ b/samples/Definitions/Silo-ServiceAccount.yaml
@@ -1,37 +1,35 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-    name: orleanssilo
-    namespace: kubetest
+  name: orleanssilo
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+kind: Role
 metadata:
-    name: orleanssilo
+  name: orleanssilo
 rules:
-    - apiGroups:
-          - orleans.dot.net
-      resources:
-          - silos
-          - clusterversions
-      verbs:
-          - get
-          - list
-          - watch
-          - create
-          - update
-          - patch
-          - delete
+- apiGroups:
+    - orleans.dot.net
+  resources:
+    - silos
+    - clusterversions
+  verbs:
+    - get
+    - list
+    - watch
+    - create
+    - update
+    - patch
+    - delete
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
-    name: orleanssilo
+  name: orleanssilo
 roleRef:
-    apiGroup: rbac.authorization.k8s.io
-    kind: ClusterRole
-    name: orleanssilo
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: orleanssilo
 subjects:
-    - kind: ServiceAccount
-      name: orleanssilo
-      namespace: kubetest
+- kind: ServiceAccount
+  name: orleanssilo
