Upgrade to Orleans 7

--- a/samples/KubeSiloHost/Dockerfile
+++ b/samples/KubeSiloHost/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/runtime:3.1-alpine
+FROM mcr.microsoft.com/dotnet/runtime:7.0-alpine
 WORKDIR /app
-COPY . ./
+COPY ./bin/Debug/net7.0 ./
 ENTRYPOINT ["dotnet", "KubeSiloHost.dll"]
