--- a/samples/HelloWorld.Interfaces/HelloWorld.Interfaces.csproj
+++ b/samples/HelloWorld.Interfaces/HelloWorld.Interfaces.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="3.5.1" />
-    <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="3.5.1" />
+    <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Orleans.Sdk" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
