--- a/samples/KubeGatewayHost/Dockerfile
+++ b/samples/KubeGatewayHost/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/runtime:3.1-alpine
+FROM mcr.microsoft.com/dotnet/runtime:7.0-alpine
 WORKDIR /app
 COPY . ./
 ENTRYPOINT ["dotnet", "KubeGatewayHost.dll"]
