Move (de-)serialization from Newtonsoft.JSON to System.Json.Text
Updated de-serialization
Fixed unit test project
Fixed broken dockerfiles for testing

--- a/samples/KubeSiloHost/Dockerfile
+++ b/samples/KubeSiloHost/Dockerfile
@@ -1,4 +1,4 @@
 FROM mcr.microsoft.com/dotnet/runtime:7.0-alpine
 WORKDIR /app
-COPY ./bin/Debug/net7.0 ./
+COPY . ./
 ENTRYPOINT ["dotnet", "KubeSiloHost.dll"]
