Some cleanup + test fix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: engineerd/setup-kind@v0.5.0
+      - uses: actions/checkout@v3      
       
+      - name: Create k8s Kind Cluster
+        uses: helm/kind-action@v1.4.0
+
       - name: Setup CRDs
         run: |
           kubectl apply -f src/Orleans.Clustering.Kubernetes/Definitions
