Move (de-)serialization from Newtonsoft.JSON to System.Json.Text (#64)
* Move (de-)serialization from Newtonsoft.JSON to System.Json.Text

Updated de-serialization
Fixed unit test project
Fixed broken dockerfiles for testing

* Updated Readme file after upgrade to .net 7

* Some cleanup + test fix

* Remove dangling file

---------

Co-authored-by: Timm Hoffmeister <hoffmeistert@bluelizard.org.uk>
Co-authored-by: Gutemberg Ribeiro <gutemberg@outlook.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,17 +10,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
-      # - uses: engineerd/setup-kind@v0.3.0
-      #   with:
-      #     config: .github/workflows/kind.yml
-      # - name: Setup Kube API
-      #   run: kubectl proxy &
+      - uses: actions/checkout@v3      
+      
+      - name: Create k8s Kind Cluster
+        uses: helm/kind-action@v1.4.0
+
+      - name: Setup CRDs
+        run: |
+          kubectl apply -f src/Orleans.Clustering.Kubernetes/Definitions
+          kubectl create ns orleans
+      
       - name: Setup .NET Core
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 7.0.100
+      
       - name: Build
         run: dotnet build --configuration Release
-      # - name: Test
-      #   run: dotnet test --configuration Release --no-build
+      
+      - name: Test
+        run: dotnet test --configuration Release --no-build
